--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
     implementation("androidx.navigation:navigation-compose:2.5.3")
+
+    //material Design
+    implementation 'com.google.android.material:material:1.8.0'
 }
